# pyutils

./: .gitignore  pyproject.toml
pyutils/: classes.py  console.py  filesystem.py  jpeg.py  texts.py
pyutils/jpg/: exif_util.py  jpg_util.py
tests/: classes_test.py  console_test.py  filesystem_test.py  texts_test.py
