[tool.poetry]
authors = []
description = ""
name = "pyutils"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pillow = "^10.4.0"
python = "^3.12,<3.13"
win32-setctime = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
